--- a/demo-outbox-producer/pom.xml
+++ b/demo-outbox-producer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.example</groupId>
         <artifactId>demo-outbox-pattern</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>demo-outbox-producer</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>demo-domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,6 +41,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-image</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
