--- a/demo-sqs-consumer/pom.xml
+++ b/demo-sqs-consumer/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.example</groupId>
 		<artifactId>demo-outbox-pattern</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>demo-sqs-consumer</artifactId>
@@ -48,6 +48,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-image</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
