--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,8 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>demo-outbox-pattern</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-
     <modules>
         <module>demo-sqs-consumer</module>
         <module>demo-dynamo-streams-producer</module>
@@ -25,6 +24,7 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud-aws.version>3.0.0</spring-cloud-aws.version>
+        <skipDocker>true</skipDocker>
     </properties>
 
     <dependencyManagement>
@@ -47,8 +47,9 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
                         <image>
-                            <name>${project.artifactId}:${project.version}</name>
+                            <name>${docker.publishRegistry.url}/${docker.publishRegistry.username}/${project.artifactId}:${project.version}</name>
                         </image>
+                        <skip>${skipDocker}</skip>
                     </configuration>
                 </plugin>
             </plugins>
